dependency management if it was terrible
lots of duplicate keys and weirdness. Added a runtime assembly :(. No choice!

--- a/Editor/AssetsOfRain.Editor.asmdef
+++ b/Editor/AssetsOfRain.Editor.asmdef
@@ -9,7 +9,9 @@
         "GUID:c5ecc461727906345a35491a0440694f",
         "GUID:5c1ff9bd975acec488150743d53a93ca",
         "GUID:48abf88f565f4bb4fb35fbe2385f0894",
-        "GUID:6b32b56b1902bf24eaf5fab6ebfd6e1f"
+        "GUID:6b32b56b1902bf24eaf5fab6ebfd6e1f",
+        "GUID:a7212287dda6d764c950b3c1d693389e",
+        "GUID:b04f7ec21bb6ebe43a85599e36f30cff"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
